--- a/index.html
+++ b/index.html
@@ -6,22 +6,18 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700;800&family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap"
       rel="stylesheet"
+      lazyload
     />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
       integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc"
       crossorigin="anonymous"
+      lazyload
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      type="text/css"
-      href="./assets/themes/dark.css"
-      class="theme-select"
-      rel="stylesheet"
-    />
     <title>Developer Braham</title>
-    <link rel="shortcut icon" href="./assets/user-tie-solid.svg" />
+    <link rel="shortcut icon" href="./assets/user-tie-solid.svg" lazyload />
   </head>
   <body>
     <!-- header -->
@@ -67,11 +63,16 @@
             <p class="secondary slideFade" data-delay=".6">
               Frontend Developer
             </p>
-            <p class="slideFade" data-delay="1">with good understanding of Javascript</p>
+            <p class="slideFade" data-delay="1">
+              with good understanding of Javascript
+            </p>
           </div>
           <div>
-            <a class="slideFade" data-delay="1.5" href="#projects"
+            <a class="slideFade home-button" data-delay="1.5" href="#projects"
               >My Projects</a
+            >
+            <a class="slideFade home-button" data-delay="1.7" href="#contact"
+              >Contact</a
             >
           </div>
         </div>
@@ -90,7 +91,7 @@
                 <img
                   class="slideFade"
                   data-delay=".3"
-                  src="./assets/images/todo list.png"
+                  src="./assets/images/todo list.jpg"
                   alt=""
                 />
               </a>
@@ -98,8 +99,8 @@
             <div class="text-container">
               <h4 class="slideFade" data-delay=".8">React TODO</h4>
               <p class="slideFade" data-delay="1">
-                A todo list in <code>react.js</code> using the
-                modern <code>ES6 Class</code> components which also uses the local
+                A todo list in <code>react.js</code> using the modern
+                <code>ES6 Class</code> components which also uses the local
                 storage feature of the browser to preserve the previous state.
               </p>
             </div>
@@ -113,7 +114,7 @@
                 <img
                   class="slideFade"
                   data-delay=".3"
-                  src="./assets/images/productPage.png"
+                  src="./assets/images/productPage.jpg"
                   alt=""
                 />
               </a>
@@ -133,7 +134,7 @@
                 <img
                   class="slideFade"
                   data-delay=".3"
-                  src="./assets/images/html canvas.png"
+                  src="./assets/images/html canvas.jpg"
                   alt=""
                 />
               </a>
@@ -152,7 +153,7 @@
                 <img
                   class="slideFade"
                   data-delay=".3"
-                  src="./assets/images/sound app.png"
+                  src="./assets/images/sound app.jpg"
                   alt=""
                 />
               </a>
@@ -161,7 +162,8 @@
               <h4 class="slideFade" data-delay=".8">Sound App</h4>
               <p class="slideFade" data-delay="1">
                 Here I have focused on the new
-                <code>&lt;audio&gt;</code> element and upon either clicking or pressing the keys will play a cool sound.
+                <code>&lt;audio&gt;</code> element and upon either clicking or
+                pressing the keys will play a cool sound.
               </p>
             </div>
           </div>
@@ -171,7 +173,7 @@
                 <img
                   class="slideFade"
                   data-delay=".3"
-                  src="./assets/images/gif generator.png"
+                  src="./assets/images/gif generator.jpg"
                   alt=""
                 />
               </a>
@@ -191,7 +193,7 @@
                 <img
                   class="slideFade"
                   data-delay=".3"
-                  src="./assets/images/technical documentation.png"
+                  src="./assets/images/technical documentation.jpg"
                   alt=""
                 />
               </a>
@@ -213,7 +215,7 @@
                 <img
                   class="slideFade"
                   data-delay=".3"
-                  src="./assets/images/mouse follow.png"
+                  src="./assets/images/mouse follow.jpg"
                   alt=""
                 />
               </a>
@@ -221,8 +223,8 @@
             <div class="text-container">
               <h4 class="slideFade" data-delay=".8">Mouse Movements</h4>
               <p class="slideFade" data-delay="1">
-                Using the mouse events with Vanilla JavaScript, I have created
-                a page in which a few things animates as the mouse cursor moves
+                Using the mouse events with Vanilla JavaScript, I have created a
+                page in which a few things animates as the mouse cursor moves
                 across the web page.
               </p>
             </div>
@@ -233,7 +235,7 @@
                 <img
                   class="slideFade"
                   data-delay=".3"
-                  src="./assets/images/survey form.png"
+                  src="./assets/images/survey form.jpg"
                   alt=""
                 />
               </a>
@@ -258,7 +260,7 @@
                 <img
                   class="slideFade"
                   data-delay=".3"
-                  src="./assets/images/tributePage.png"
+                  src="./assets/images/tributePage.jpg"
                   alt=""
                 />
               </a>
@@ -342,14 +344,11 @@
             <h2 class="slideFade" data-delay=".2">About me</h2>
             <div class="slideFade" data-delay=".8">
               <p>
-                I am a <strong>Web Developer</strong> with having a
-                very good understanding of the
-                <strong> web technologies</strong>, I also have a huge interest
-                in computer science and science in general.
+                I am a <strong>Web Developer</strong> with having a very good
+                understanding of the <strong> web technologies</strong>, I also
+                have a huge interest in computer science and science in general.
               </p>
-              <p>
-                I am tech savvy, I always keeps myself upto date.
-              </p>
+              <p>I am tech savvy, I always keeps myself upto date.</p>
               <p>
                 I am ready to work as a <strong>team</strong>, I am ready to
                 take the new <strong>opportunity</strong>.
@@ -376,8 +375,8 @@
             <p>
               <strong>Freecodecamp</strong> certificate in
               <strong
-                >Responsive Web design, Data Structures & algorithms,
-                Functional Programming</strong
+                >Responsive Web design, Data Structures & algorithms, Functional
+                Programming</strong
               >
             </p>
             <p>
@@ -391,56 +390,64 @@
             </p>
           </div>
         </div>
-
-        <div class="social-links card slideFade">
-          <a href="https://www.freecodecamp.org/brahamprakash" target="_blank">
-            <i class="fab fa-3x fa-free-code-camp"></i>
-          </a>
-          <a href="https://www.linkedin.com/in/braham2095/" target="_blank" rel="noopener noreferrer">
-            <i class="fab fa-3x fa-linkedin"></i>
-          </a>
-          <a href="https://github.com/devbrm" target="_blank">
-            <i class="fab fa-3x fa-github"></i>
-          </a>
-        </div>
       </section>
 
       <!-- contact -->
       <section id="contact">
         <h1>Let's have a talk</h1>
-        <div class="contact-form slideFade">
-          <form action="">
-            <input
-              class="slideFade"
-              data-delay=".3"
-              type="text"
-              required
-              name="name"
-              id="name"
-              placeholder="Enter Name"
-            />
-            <input
-              class="slideFade"
-              data-delay=".3"
-              type="email"
-              required
-              name="email"
-              id="email"
-              placeholder="Enter Email"
-            />
-            <textarea
-              class="slideFade"
-              data-delay=".3"
-              name="message"
-              id="message"
-              required
-              placeholder="Enter Message"
-            ></textarea>
-            <button class="slideFade" data-delay=".8" type="submit">
-              Submit
-            </button>
-          </form>
+        <div class="social-links card slideFade">
+          <a href="https://www.freecodecamp.org/brahamprakash" target="_blank">
+            <i class="fab fa-3x fa-free-code-camp"></i>
+          </a>
+          <a
+            href="https://www.linkedin.com/in/braham2095/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <i class="fab fa-3x fa-linkedin"></i>
+          </a>
+          <a href="https://github.com/devbrm" target="_blank">
+            <i class="fab fa-3x fa-github"></i>
+          </a>
+          <a
+            href="https://mail.google.com/mail/?view=cm&fs=1&to=developer.brm@gmail.com"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fas fa-3x fa-envelope"></i>
+          </a>
         </div>
+        <div class="or">--or--</div>
+        <form id="form" action="">
+          <input
+            class="slideFade"
+            data-delay=".3"
+            type="text"
+            required
+            name="name"
+            id="name"
+            placeholder="Enter Name"
+          />
+          <input
+            class="slideFade"
+            data-delay=".3"
+            type="email"
+            required
+            name="email"
+            id="email"
+            placeholder="Enter Email"
+          />
+          <textarea
+            class="slideFade"
+            data-delay=".3"
+            name="message"
+            id="message"
+            required
+            placeholder="Enter Message"
+          ></textarea>
+          <button class="slideFade" data-delay=".8" type="submit">
+            Submit
+          </button>
+        </form>
       </section>
     </main>
 
@@ -449,10 +456,16 @@
       <div>Made with ❤ by Braham Prakash, Copyright &copy; 2020</div>
     </footer>
 
+    <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
     <script
+      async
+      src="https://www.gstatic.com/firebasejs/7.19.1/firebase-database.js"
+    ></script>
+    <script
+      async
       type="text/javascript"
       src="./assets/ParticleJS/particles.js"
     ></script>
-    <script type="text/javascript" src="./index.js"></script>
+    <script async type="text/javascript" src="./index.js"></script>
   </body>
 </html>
