improved some animations

--- a/index.html
+++ b/index.html
@@ -417,14 +417,12 @@
           </a>
         </div>
         <div class="or">--or--</div>
+        <span class="info fadeOut">Copied to Clipboard</span>
         <div data-delay=".2" class="email-text slideFade">
           <input class="email" value="developer.brm@gmail.com" readonly />
-          <span class="info slideFade">Copied to Clipboard</span>
         </div>
         <div class="or">--or--</div>
-        <p class="submit-message slideFade">
-          Message has been successfully sent
-        </p>
+        <p class="submit-message fadeOut">Message has been successfully sent</p>
         <form id="form" action="">
           <input
             class="slideFade"
