--- a/index.html
+++ b/index.html
@@ -107,23 +107,49 @@
           </div>
           <div data-delay=".15" class="project slideFade">
             <div class="img-container">
-              <a
-                href="https://devbrm.github.io/fccProductPage/#plans"
-                target="_blank"
-              >
+              <a href="https://devbrm.github.io/calculator/" target="_blank">
                 <img
                   class="slideFade"
                   data-delay=".3"
-                  src="./assets/images/productPage.jpg"
+                  src="./assets/images/calculator.jpg"
                   alt=""
                 />
               </a>
             </div>
             <div class="text-container">
-              <h4 class="slideFade" data-delay=".8">Product Page</h4>
+              <h4 class="slideFade" data-delay=".8">React Calculator</h4>
               <p class="slideFade" data-delay="1">
-                In this project I have created a product landing page for a
-                fashion design website.
+                A decent and elegent calculator made using React in which a
+                simple mathmatical expressions can be evaluated. I have also
+                used <b>sessionStorage</b> Object of the
+                <code>JavaScript</code> to hold the history of the calculator.
+              </p>
+            </div>
+          </div>
+          <div data-delay=".15" class="project slideFade">
+            <div class="img-container">
+              <a href="https://devbrm.github.io/sudokuApp/" target="_blank">
+                <img
+                  class="slideFade"
+                  data-delay=".3"
+                  src="./assets/images/sudoku.jpg"
+                  alt=""
+                />
+              </a>
+            </div>
+            <div class="text-container">
+              <h4 class="slideFade" data-delay=".8">React Sudoku</h4>
+              <p class="slideFade" data-delay="1">
+                This a very big project with thousands of the line of code in
+                both <code>React</code> and <code>SCSS</code> using
+                <b>React Components, React Router, Firebase</b>(as a service to
+                store highscores and the rating for the). I have also used the
+                <b>localStorage</b> Object of JavaScript for various purposes. I
+                intorduced many features in the web app like
+                <b
+                  >Navigation, highscores, history, undo, redo, rating, timer,
+                  etc.</b
+                >
               </p>
             </div>
           </div>
@@ -400,7 +426,7 @@
             <i class="fab fa-3x fa-free-code-camp"></i>
           </a>
           <a
-            href="https://www.linkedin.com/in/braham2095/"
+            href="https://www.linkedin.com/in/devbrm/"
             target="_blank"
             rel="noopener noreferrer"
           >
