--- a/index.html
+++ b/index.html
@@ -153,6 +153,28 @@
               </p>
             </div>
           </div>
+          <div data-delay=".15" class="project slideFade">
+            <div class="img-container">
+              <a href="https://devbrm.github.io/chatApp/" target="_blank">
+                <img
+                  class="slideFade alignBottom"
+                  data-delay=".3"
+                  src="./assets/images/chatApp.jpg"
+                  alt=""
+                />
+              </a>
+            </div>
+            <div class="text-container">
+              <h4 class="slideFade" data-delay=".8">React Chat App</h4>
+              <p class="slideFade" data-delay="1">
+                This is a live <b>Chat App</b>, built using
+                <code>React</code> and <code>Firebase</code>. First you have to
+                enter name, select or create <b>Room</b> for the chat. The chat
+                is real time and also shows the sender's name and the
+                <b>time stamp</b>
+              </p>
+            </div>
+          </div>
 
           <div data-delay=".15" class="project slideFade">
             <div class="img-container">
