updated the email

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <div data-delay=".15" class="project slideFade">
             <div class="img-container">
               <a
-                href="https://devbrm.github.io/react-TodoList/"
+                href="https://developerbrm.github.io/react-TodoList/"
                 target="_blank"
               >
                 <img
@@ -107,7 +107,7 @@
           </div>
           <div data-delay=".15" class="project slideFade">
             <div class="img-container">
-              <a href="https://devbrm.github.io/calculator/" target="_blank">
+              <a href="https://developerbrm.github.io/calculator/" target="_blank">
                 <img
                   class="slideFade"
                   data-delay=".3"
@@ -128,7 +128,7 @@
           </div>
           <div data-delay=".15" class="project slideFade">
             <div class="img-container">
-              <a href="https://devbrm.github.io/sudokuApp/" target="_blank">
+              <a href="https://developerbrm.github.io/sudokuApp/" target="_blank">
                 <img
                   class="slideFade"
                   data-delay=".3"
@@ -155,7 +155,7 @@
           </div>
           <div data-delay=".15" class="project slideFade">
             <div class="img-container">
-              <a href="https://devbrm.github.io/chatApp/" target="_blank">
+              <a href="https://developerbrm.github.io/chatApp/" target="_blank">
                 <img
                   class="slideFade alignBottom"
                   data-delay=".3"
@@ -178,7 +178,7 @@
 
           <div data-delay=".15" class="project slideFade">
             <div class="img-container">
-              <a href="https://devbrm.github.io/HtmlCanvas/" target="_blank">
+              <a href="https://developerbrm.github.io/HtmlCanvas/" target="_blank">
                 <img
                   class="slideFade"
                   data-delay=".3"
@@ -197,7 +197,7 @@
           </div>
           <div data-delay=".15" class="project slideFade">
             <div class="img-container">
-              <a href="https://devbrm.github.io/Sound-App/" target="_blank">
+              <a href="https://developerbrm.github.io/Sound-App/" target="_blank">
                 <img
                   class="slideFade"
                   data-delay=".3"
@@ -217,7 +217,7 @@
           </div>
           <div data-delay=".15" class="project slideFade">
             <div class="img-container">
-              <a href="https://devbrm.github.io/randomGIF/" target="_blank">
+              <a href="https://developerbrm.github.io/randomGIF/" target="_blank">
                 <img
                   class="slideFade"
                   data-delay=".3"
@@ -237,7 +237,7 @@
           </div>
           <div data-delay=".15" class="project slideFade">
             <div class="img-container">
-              <a href="https://devbrm.github.io/fccTD/" target="_blank">
+              <a href="https://developerbrm.github.io/fccTD/" target="_blank">
                 <img
                   class="slideFade"
                   data-delay=".3"
@@ -257,7 +257,7 @@
           <div data-delay=".15" class="project slideFade">
             <div class="img-container">
               <a
-                href="https://devbrm.github.io/FollowTheMouse/"
+                href="https://developerbrm.github.io/FollowTheMouse/"
                 target="_blank"
               >
                 <img
@@ -279,7 +279,7 @@
           </div>
           <div data-delay=".15" class="project slideFade">
             <div class="img-container">
-              <a href="https://devbrm.github.io/fccSurveyForm/" target="_blank">
+              <a href="https://developerbrm.github.io/fccSurveyForm/" target="_blank">
                 <img
                   class="slideFade"
                   data-delay=".3"
@@ -302,7 +302,7 @@
           <div data-delay=".15" class="project slideFade">
             <div class="img-container">
               <a
-                href="https://devbrm.github.io/fccTributePage/"
+                href="https://developerbrm.github.io/fccTributePage/"
                 target="_blank"
               >
                 <img
@@ -448,13 +448,13 @@
             <i class="fab fa-3x fa-free-code-camp"></i>
           </a>
           <a
-            href="https://www.linkedin.com/in/devbrm/"
+            href="https://www.linkedin.com/in/developerbrm/"
             target="_blank"
             rel="noopener noreferrer"
           >
             <i class="fab fa-3x fa-linkedin"></i>
           </a>
-          <a href="https://github.com/devbrm" target="_blank">
+          <a href="https://github.com/developerbrm" target="_blank">
             <i class="fab fa-3x fa-github"></i>
           </a>
           <a
