--- a/index.html
+++ b/index.html
@@ -85,50 +85,9 @@
           <div data-delay=".15" class="project slideFade">
             <div class="img-container">
               <a
-                href="https://developerbrm.github.io/react-TodoList/"
+                href="https://developerbrm.github.io/sudokuApp/"
                 target="_blank"
               >
-                <img
-                  class="slideFade"
-                  data-delay=".3"
-                  src="./assets/images/todo list.jpg"
-                  alt=""
-                />
-              </a>
-            </div>
-            <div class="text-container">
-              <h4 class="slideFade" data-delay=".8">React TODO</h4>
-              <p class="slideFade" data-delay="1">
-                A todo list in <code>react.js</code> using the modern
-                <code>ES6 Class</code> components which also uses the local
-                storage feature of the browser to preserve the previous state.
-              </p>
-            </div>
-          </div>
-          <div data-delay=".15" class="project slideFade">
-            <div class="img-container">
-              <a href="https://developerbrm.github.io/calculator/" target="_blank">
-                <img
-                  class="slideFade"
-                  data-delay=".3"
-                  src="./assets/images/calculator.jpg"
-                  alt=""
-                />
-              </a>
-            </div>
-            <div class="text-container">
-              <h4 class="slideFade" data-delay=".8">React Calculator</h4>
-              <p class="slideFade" data-delay="1">
-                A decent and elegent calculator made using React in which a
-                simple mathmatical expressions can be evaluated. I have also
-                used <b>sessionStorage</b> Object of the
-                <code>JavaScript</code> to hold the history of the calculator.
-              </p>
-            </div>
-          </div>
-          <div data-delay=".15" class="project slideFade">
-            <div class="img-container">
-              <a href="https://developerbrm.github.io/sudokuApp/" target="_blank">
                 <img
                   class="slideFade"
                   data-delay=".3"
@@ -175,10 +134,59 @@
               </p>
             </div>
           </div>
-
           <div data-delay=".15" class="project slideFade">
             <div class="img-container">
-              <a href="https://developerbrm.github.io/HtmlCanvas/" target="_blank">
+              <a
+                href="https://developerbrm.github.io/react-TodoList/"
+                target="_blank"
+              >
+                <img
+                  class="slideFade"
+                  data-delay=".3"
+                  src="./assets/images/todo list.jpg"
+                  alt=""
+                />
+              </a>
+            </div>
+            <div class="text-container">
+              <h4 class="slideFade" data-delay=".8">React TODO</h4>
+              <p class="slideFade" data-delay="1">
+                A todo list in <code>react.js</code> using the modern
+                <code>ES6 Class</code> components which also uses the local
+                storage feature of the browser to preserve the previous state.
+              </p>
+            </div>
+          </div>
+          <div data-delay=".15" class="project slideFade">
+            <div class="img-container">
+              <a
+                href="https://developerbrm.github.io/calculator/"
+                target="_blank"
+              >
+                <img
+                  class="slideFade"
+                  data-delay=".3"
+                  src="./assets/images/calculator.jpg"
+                  alt=""
+                />
+              </a>
+            </div>
+            <div class="text-container">
+              <h4 class="slideFade" data-delay=".8">React Calculator</h4>
+              <p class="slideFade" data-delay="1">
+                A decent and elegent calculator made using React in which a
+                simple mathmatical expressions can be evaluated. I have also
+                used <b>sessionStorage</b> Object of the
+                <code>JavaScript</code> to hold the history of the calculator.
+              </p>
+            </div>
+          </div>
+          <div data-delay=".15" class="project slideFade">
+            <div class="img-container">
+              <a
+                href="https://developerbrm.github.io/HtmlCanvas/"
+                target="_blank"
+              >
                 <img
                   class="slideFade"
                   data-delay=".3"
@@ -197,7 +205,10 @@
           </div>
           <div data-delay=".15" class="project slideFade">
             <div class="img-container">
-              <a href="https://developerbrm.github.io/Sound-App/" target="_blank">
+              <a
+                href="https://developerbrm.github.io/Sound-App/"
+                target="_blank"
+              >
                 <img
                   class="slideFade"
                   data-delay=".3"
@@ -217,7 +228,10 @@
           </div>
           <div data-delay=".15" class="project slideFade">
             <div class="img-container">
-              <a href="https://developerbrm.github.io/randomGIF/" target="_blank">
+              <a
+                href="https://developerbrm.github.io/randomGIF/"
+                target="_blank"
+              >
                 <img
                   class="slideFade"
                   data-delay=".3"
@@ -279,7 +293,10 @@
           </div>
           <div data-delay=".15" class="project slideFade">
             <div class="img-container">
-              <a href="https://developerbrm.github.io/fccSurveyForm/" target="_blank">
+              <a
+                href="https://developerbrm.github.io/fccSurveyForm/"
+                target="_blank"
+              >
                 <img
                   class="slideFade"
                   data-delay=".3"
