--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
           <div class="orange"></div>
         </div>
         <ul class="slideFade" data-delay=".2">
+          <li>
+            <a
+              class="resumeButton"
+              href="./assets/files/Braham_Prakash_resume.pdf"
+              target="_blank"
+              download
+              ><i class="fas fa-download"></i> Resume</a
+            >
+          </li>
           <li><a href="#home">Home</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#skills">Skills</a></li>
@@ -73,6 +82,14 @@
             >
             <a class="slideFade home-button" data-delay="1.7" href="#contact"
               >Contact</a
+            >
+            <a
+              class="slideFade home-button resumeButton"
+              data-delay="2"
+              href="./assets/files/Braham_Prakash_resume.pdf"
+              target="_blank"
+              download
+              ><i class="fas fa-download"></i> Resume</a
             >
           </div>
         </div>
