--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <nav class="navbar slideFade">
         <div class="logo slideFade" data-delay=".2">
           <a href="#home"
-            ><img class="logo-img" src="./assets/images/hero.jpg" alt=""
+            ><img class="logo-img" src="./assets/images/myPic.jpg" alt=""
           /></a>
         </div>
         <div class="themes">
