--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
           </a>
         </div>
         <div class="or">--or--</div>
-        <span class="info fadeOut">Copied to Clipboard</span>
+        <div class="infoContainer"> </div>
         <div data-delay=".2" class="email-text slideFade">
           <input class="email" value="developer.brm@gmail.com" readonly />
         </div>
