Profile pic update

--- a/index.html
+++ b/index.html
@@ -65,7 +65,12 @@
       <!-- Home -->
       <section id="home">
         <div class="home-left-container">
-          <div class="img-container slideFade"></div>
+          <div class="img-container slideFade">
+            <picture>
+              <source srcset="./assets/images/profile-pic.webp" type="image/webp">
+              <img src="./assets/images/profile-pic.jpg" alt="Profile-pic">
+            </picture>
+          </div>
           <div class="text-container">
             <p class="secondary slideFade">Hello, I am</p>
             <h1 class="slideFade" data-delay=".3">Braham Prakash</h1>
