added a meta des

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       crossorigin="anonymous"
       lazyload
     />
+    <meta
+      name="description"
+      content="I am a Web Developer with having a very good understanding of the web technologies, I also have a huge interest in computer science and science in general. I am tech savvy, I always keeps myself upto date. I am ready to work as a team, I am ready to take the new opportunity."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Developer Braham</title>
     <link rel="shortcut icon" href="./assets/user-tie-solid.svg" lazyload />
@@ -37,7 +41,7 @@
                 type="image/webp"
               />
               <img
-              class="logo-img"
+                class="logo-img"
                 src="./assets/images/profile-pic.jpg"
                 alt="Profile-pic"
               /> </picture
