fixed the length of the meta des

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
     <meta
       name="description"
-      content="I am a Web Developer with having a very good understanding of the web technologies, I also have a huge interest in computer science and science in general. I am tech savvy, I always keeps myself upto date. I am ready to work as a team, I am ready to take the new opportunity."
+      content="Hello this is Braham Prakash. Fullstack web developer with very strong foundation of the MERN Stack."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Developer Braham</title>
