--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
       name="description"
       content="Hello this is Braham Prakash. Fullstack web developer with very strong foundation of the MERN Stack."
     />
+    <meta
+      name="keywords"
+      content="developerbrm, braham prakash, web developer, braham9922, developer.brm, developer.brm@gmail.com, MERN, html, react, full stack"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="EN" />
+    <meta name="author" content="Braham Prakash" />
+    <meta name="distribution" content="global" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Developer Braham</title>
     <link rel="shortcut icon" href="./assets/user-tie-solid.svg" lazyload />
